fix key,value declaration in template

--- a/templates/parsers.conf.j2
+++ b/templates/parsers.conf.j2
@@ -121,6 +121,8 @@
 # custom parser
 {% for parser in fluentbit_custom_parsers %}
 [PARSER]
-    {{ key }} {{ parser[key] }}
+{% for key,value in parser.items() %}
+    {{ key }} {{ value }}
+{% endfor %}
 {% endfor %}
 {% endif %}
